<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_configuration"
    tools:context="com.future.it.gasmyr.savephone.Configuration">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="0.0"
        android:orientation="vertical"
        android:id="@+id/main1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textStyle="bold"
            android:id="@+id/one"
            android:gravity="center"
            android:text="@string/title_activity_configuration"/>
        <View
            android:layout_width="match_parent"
            android:background="#004d40"
            android:id="@+id/two"
            android:layout_height="8dp"></View>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
             <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:layout_marginLeft="20dp"
                 android:textStyle="bold"
                android:text="@string/phoneLabel"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/phoneNumber"
                android:inputType="phone"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/smsCheckBox"
                android:text="@string/smsCheckboxLabel"/>
            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/callCheckBox"
                android:text="@string/callCheckboxLabel"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="0.0"
        android:id="@+id/main2"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/saveConfigButton" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/main5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/keytitle"/>
        <View
            android:layout_width="match_parent"
            android:background="#004d40"
            android:layout_height="5dp"></View>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/keybuttontitle"
            android:id="@+id/askApplicationKeyButton"
            android:textStyle="italic"/>
        <View
            android:layout_width="match_parent"
            android:background="#004d40"
            android:layout_height="5dp"></View>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main3"
        android:layout_width="fill_parent"
        android:layout_weight="0.0"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/receivedkey"
            android:layout_marginLeft="15dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
       <EditText
           android:layout_width="fill_parent"
           android:layout_weight="0.7"
           android:id="@+id/applicationKey"
           android:layout_height="wrap_content"
           android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main4"
        android:layout_width="fill_parent"
        android:layout_weight="0.0"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/hide"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/hideAppButton" />
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/savekey"
            android:layout_height="wrap_content"
            android:id="@+id/saveAppKeyButton" />
    </LinearLayout>
</LinearLayout>
