<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/myBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_dropbox"
            android:id="@+id/imageView" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:textColor="#33691e"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="match_parent"
            android:background="#004d40"
            android:layout_height="8dp"></View>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="3"
        android:layout_marginBottom="15dp"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AppDescription"
            android:id="@+id/textView2"
            android:textStyle="italic"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:id="@+id/textView3"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#304ffe"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
